# LUX

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  render_config.h  render_runner.cpp  render_runner.h
src/bvh/: CMakeLists.txt  bvh_build_input.h  bvh_device.cuh  bvh_overlap.cu  bvh_overlap.cuh  bvh_validation.h  cpu_bvh.h  cpu_bvh_traversal.h  cpu_lbvh_builder.h  gpu_bvh.cu  gpu_bvh.cuh
src/camera/: CMakeLists.txt  camera.h  pinhole_camera.h
src/core/: CMakeLists.txt  aabb.cuh  constants.h  cuda_check.cuh  mat4.cuh  pcg.cuh  ray.cuh  ray_offset.cuh  types.h  validation.cuh  vec2.cuh  vec3.cuh
src/diagnostics/: CMakeLists.txt  diagnostic_config.h
src/diagnostics/cpu/: cpu_aov.cpp  cpu_diagnostics.cpp  cpu_diagnostics.h  cpu_diagnostics_internal.h  cpu_mesh.cpp  cpu_probe.cpp
src/film/: CMakeLists.txt  film.h  pfm.h  ppm.h
src/geometry/: CMakeLists.txt  mesh.h  primitive_kind.h  triangle.h  triangle_mesh_view.h
src/integrator/: CMakeLists.txt  cpu_path_tracer.cpp  cpu_path_tracer.h  cpu_path_tracer_diagnostics.h  integrator.h  integrator_factory.cpp  integrator_factory.h  path_transport.cuh  pathstate.cuh  render_context.h  wavefront_debug.cuh  wavefront_direct_lighting.cuh  wavefront_kernels.cu  wavefront_kernels.cuh  wavefront_material_queues.cuh  wavefront_material_registry.cuh  wavefront_pt.cu  wavefront_pt.cuh  wavefront_runtime.cu  wavefront_runtime.cuh  wavefront_scheduler.cu  workitems.cuh  workqueue.cuh
src/light/: CMakeLists.txt  light.h  light_distribution.cpp  light_distribution.h  light_sampler.h
src/material/: CMakeLists.txt  bsdf.h  material.h
src/sampler/: CMakeLists.txt  sample_record.h  sampler.h
src/scene/: CMakeLists.txt  cornell_box.h  direct_light_test.h  gpu_scene.h  gpu_scene_bvh.cuh  gpu_scene_light_sampler.cuh  gpu_scene_view.h  lux_cover.h  prepared_scene.cu  prepared_scene.h  prepared_scene_cpu.cpp  primitive_ref.h  scene.h  scene_build.h  scene_data.h  scene_edit.h  scene_intersection.h  scene_light_sampler.h  scene_prepare.h  scene_stamp.h  scene_validate.h  stanford_bunny.h  stanford_dragon.h  transparent_filter.h
src/util/: CMakeLists.txt  env_image_loader.cpp  env_image_loader.h  obj_loader.cpp  obj_loader.h
