# ============================================
# LUX Renderer
# ============================================

add_subdirectory(core)
add_subdirectory(util)
add_subdirectory(sampler)
add_subdirectory(geometry)
add_subdirectory(bvh)
add_subdirectory(camera)
add_subdirectory(material)
add_subdirectory(light)
add_subdirectory(scene)
add_subdirectory(film)
add_subdirectory(integrator)
add_subdirectory(diagnostics)
add_subdirectory(app)
